--- a/README
+++ b/README
@@ -4,14 +4,21 @@ Gray
 
 Project 3
 
-Sources(to do)
+Sources
+	TLPI dist files,
+	The Complete Linux Command Line by William E. Shotts Jr.
+	The OUDALAB provided source code
+	The linux manpages, especially bzero(3) and malloc
+	The Linux Programming Interface
+	Lecture Slides
+	github.com/psankar/simplefs
 
-Help(to do)
+Help
 zinspect: syntax: ./zinspect [-master|[-inode|-inodee|-dblock|raw [block number]]
 	master prints the master record
 	inode prints the inode number, followed by the type, the contents of the blocks of the inode, and finally the total size of the inode
 	inodee is like inode plus a number of references to the inode
 	dblock is like inode but for data blocks
 	raw is like inodee for raw data
-
-process(to do)
+process
+	First I broke the problems down into steps, then made a git branch for each. When I was having memory problems, I used VALGRIND. I looked at simplefs on GitHub, but didn't find much useful stuff. I copied out of the provided source code when appropriate.
